Bug(UI) - Fix form responsiveness on tablet view
- Make page responsive to tablet and laptop screens
 - Add site logo at necessary sections
 - Add and use font

[finishes #163364719]

--- a/UI/assets/css/auth.css
+++ b/UI/assets/css/auth.css
@@ -1,5 +1,186 @@
+/* 
+/**Stylesheet RESET code
+*html5doctor.com Reset Stylesheet
+*v1.6.1
+*Last Updated: 2010-09-17
+*Author: Richard Clark - http://richclarkdesign.com 
+*Twitter: @rich_clark
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+body {
+  line-height: 1;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+nav ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+/* change colours to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+
+/* change colours to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* change border colour to suit your needs */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+input,
+select {
+  vertical-align: middle;
+}
+
+/**My code */
 * {
   text-decoration: none;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -10,10 +191,10 @@ body {
   display: block;
   border-radius: 5px;
   background-color: transparent;
-  padding: 10px 50px 50px 10px;
+  padding: 0px 50px 50px 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .sign-in-form {
@@ -23,7 +204,23 @@ body {
   padding: 10px 50px 50px 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
-  margin-top: 145px;
+  margin-top: 75px;
+}
+
+.sign-up-form p {
+  text-align: center;
+  font-family: Catamaran;
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.sign-in-form p {
+  text-align: center;
+  font-family: Catamaran;
+  display: block;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .form-class {
@@ -42,6 +239,7 @@ textarea {
   width: 100%;
   padding: 10px;
   padding-right: 5px;
+  margin-top: 10px;
   display: block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -73,16 +271,12 @@ input[type=submit]:hover {
 }
 
 .header-logo {
-  font-family: Catamaran;
-  font-size: 15px;
-  font-weight: 600;
-  color: #111;
-  text-transform: uppercase;
   display: block;
-  margin-top: 10px;
-  margin-left: 10px;
+  margin: auto;
+  margin-top: 15px;
   text-align: center;
   padding: 10px 0px;
+  width: 60%;
 }
 
 /*for laptop screen*/
